%%{init: {'theme':'dark', 'themeVariables': {'fontSize':'14px','primaryColor':'#1d4ed8','primaryBorderColor':'#93c5fd','primaryTextColor':'#e5e7eb','lineColor':'#93c5fd'}}}%%
erDiagram
    Users {
        int UserID PK
        varchar Username UK
        varchar Email UK
        nvarchar FullName
        varchar Role "Student|Instructor|Admin"
        varchar Status
        datetime2 CreatedAt
    }
    Categories {
        int CategoryID PK
        nvarchar CategoryName UK
        nvarchar Description
    }
    Courses {
        int CourseID PK
        varchar CourseCode UK
        nvarchar Title
        int InstructorID FK
        int CategoryID FK
        varchar Level
        varchar Status
    }
    Modules {
        int ModuleID PK
        int CourseID FK
        nvarchar Title
        int OrderIndex
    }
    Materials {
        int MaterialID PK
        int ModuleID FK
        nvarchar Title
        varchar MaterialType
        nvarchar ContentURL
    }
    Enrollments {
        int EnrollmentID PK
        int StudentID FK
        int CourseID FK
        varchar Status
        decimal ProgressPercent
    }
    Assignments {
        int AssignmentID PK
        int CourseID FK
        nvarchar Title
        varchar AType "Assignment|Quiz|Exam"
        decimal MaxScore
        datetime2 Deadline
        varchar LatePolicy
    }
    Questions {
        int QuestionID PK
        int AssignmentID FK
        nvarchar QuestionText
        decimal Points
    }
    QuestionOptions {
        int OptionID PK
        int QuestionID FK
        nvarchar OptionText
        bit IsCorrect
    }
    Submissions {
        int SubmissionID PK
        int AssignmentID FK
        int StudentID FK
        datetime2 SubmittedAt
        bit IsLate
        varchar Status
        int Attempt
    }
    StudentAnswers {
        int AnswerID PK
        int SubmissionID FK
        int QuestionID FK
        int SelectedOptionID FK
    }
    Grades {
        int GradeID PK
        int SubmissionID FK,UK
        decimal Score
        nvarchar Feedback
        int GradedBy FK
    }
    ForumThreads {
        int ThreadID PK
        int CourseID FK
        int CreatedBy FK
        nvarchar Title
    }
    ForumPosts {
        int PostID PK
        int ThreadID FK
        int UserID FK
        int ParentPostID FK
        nvarchar Content
    }
    Recommendations {
        int RecommendationID PK
        int StudentID FK
        int CourseID FK
        decimal Score
        varchar Status
    }
    InteractionLogs {
        bigint LogID PK
        int UserID FK
        uniqueidentifier SessionID
        varchar ActionType
        int DurationSec
    }
    Certificates {
        int CertificateID PK
        int StudentID FK
        int CourseID FK
        decimal FinalScore "CHECK >= 80"
        datetime2 IssuedAt
        varchar CertificateCode
    }

    Users           ||--o{ Courses          : "teaches"
    Categories      ||--o{ Courses          : "classifies"
    Courses         ||--o{ Modules          : "has"
    Modules         ||--o{ Materials        : "contains"
    Users           ||--o{ Enrollments      : "enrolls"
    Courses         ||--o{ Enrollments      : "enrolled in"
    Courses         ||--o{ Assignments      : "has"
    Assignments     ||--o{ Questions        : "has"
    Questions       ||--o{ QuestionOptions  : "has"
    Assignments     ||--o{ Submissions      : "receives"
    Users           ||--o{ Submissions      : "submits"
    Submissions     ||--o{ StudentAnswers   : "contains"
    Questions       ||--o{ StudentAnswers   : "answered in"
    QuestionOptions ||--o{ StudentAnswers   : "chosen in"
    Submissions     ||--|| Grades           : "evaluated by"
    Users           ||--o{ Grades           : "grades"
    Courses         ||--o{ ForumThreads     : "has"
    ForumThreads    ||--o{ ForumPosts       : "has"
    Users           ||--o{ ForumPosts       : "writes"
    ForumPosts      ||--o{ ForumPosts       : "replies to"
    Users           ||--o{ Recommendations  : "receives"
    Courses         ||--o{ Recommendations  : "recommended"
    Users           ||--o{ InteractionLogs  : "generates"
    Users           ||--o{ Certificates     : "earns"
    Courses         ||--o{ Certificates     : "certified by"
